style.css
/*
Theme Name: soyes
Description: A very simple blog for eco friendly bloggers!
Version: 0.0.1
Author: Alex so yes
Theme URI: https://alexsoyes.com
Author URI: https://alexsoyes.com
License: GNU General Public License v3
License URI: http://www.gnu.org/licenses/gpl-3.0.html
Tags: one-column, two-columns, right-sidebar, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready, custom-background, custom-colors, custom-header, custom-logo, custom-menu, blog, theme-options
Text Domain: soyes
Domain Path: /languages
Tested up to: 5.0
Requires PHP: 7.1
*/

*, ::after, ::before {
    box-sizing: border-box;
}

/**
 * Variables.
 */
:root {
    /* Container */
    --container-max-width: 1260px;
    --container-padding: 20px;
    --container-width: calc(100% - (var(--container-padding) * 2));

    /* Main colors */
    --color-primary: #0060df;
    --color-secondary: #592acb;
    --color-tertiary: #FFFBDD;
    --color-quaternary: #20123a;

    /* Colors */
    --color-white: #fff;
    --color-black: #000; /* rgba(0, 0, 0, 0.87); */
    --color-lightgray: #f7f7f7; /* #f9f9fa */
    --color-gray: #dfe1e5; /* #dfe1e5; #ddd */
    --color-grayer: #525252; /** rgb(117, 117, 117)  | #9e9e9e **/
    --color-italic: var(--color-tertiary);
    --color-link: var(--color-primary);
    --color-box-shadow: rgba(0, 0, 0, 0.1);

    /* Elements */
    --box-shadow-default: 0 1px 6px 0 var(--color-box-shadow); /* 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12); */
    --box-shadow-strong: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12); /* 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12); */
    --radius-default: 5px;
    --radius-strong: 15px;
    --radius-stronger: 30px;
    --transition-default: 0.5s all;

    /* Breakpoints */
    --breakpoint-small: 0;
    --breakpoint-medium: 768px;
    --breakpoint-large: 992px;

    /* Font sizes */
    --font-size-menu: 14px;
    --font-size-category: 10px;
    --font-size-excerpt: 18px;
    --font-size-label: 15px;
    --font-size-code: 15px;
    --font-size-button: 15px;
    --font-size-input: 15px;
    --font-size-paragraph: 16px;
    --font-size-text: 16px;
    --font-size-comment: 15px;
    --font-size-list: 16px;
    --font-size-list-child: 15px;
    --font-size-list-number: 13px;
    --font-size-caption: 13px;
    --font-size-table: 15px;
    --font-size-h1: 36px;
    --font-size-h2: 28px;
    --font-size-h3: 24px;
    --font-size-h4: 22px;
    --font-size-h5: 18px;
    --font-size-h6: 16px;

    /* Font Weights */
    --font-weight-bolder: 800;
    --font-weight-bold: 700;
    --font-weight-normal: 400;
}

@media only screen and (min-width: 992px) {
    :root {
        --container-width: calc(992px - (var(--container-padding) * 2));
        --font-size-paragraph: 18px;
        --font-size-h1: 48px;
        --font-size-h2: 32px;
        --font-size-h3: 24px;
        --font-size-h4: 22px;
        --font-size-h5: 20px;
        --font-size-h6: 18px;
    }
}

/**
 * Fonts.
 */
/* open-sans-regular - latin */
/* open-sans-regular - latin */
@font-face {
    font-display: swap;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 400;
    src: local(''),
    url('assets/fonts/open-sans-v23-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('assets/fonts/open-sans-v23-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* open-sans-italic - latin */
@font-face {
    font-display: swap;
    font-family: 'Open Sans';
    font-style: italic;
    font-weight: 400;
    src: local(''),
    url('assets/fonts/open-sans-v23-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('assets/fonts/open-sans-v23-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* open-sans-700 - latin */
@font-face {
    font-display: swap;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 700;
    src: local(''),
    url('assets/fonts/open-sans-v23-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('assets/fonts/open-sans-v23-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* open-sans-800 - latin */
@font-face {
    font-display: swap;
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 800;
    src: local(''),
    url('assets/fonts/open-sans-v23-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('assets/fonts/open-sans-v23-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}


/**
 * Global.
 */
html {
    font-family: 'Open Sans', sans-serif;
}

a {
    text-decoration: none;
    color: var(--color-link);
}

a:hover {
    border-bottom: 1px solid var(--color-link);
}

button {
    transition: var(--transition-default);
    cursor: pointer;
}

input:focus {
    outline: none;
}

/**
 * Header.
 */

#header {
    padding-top: 5px;
}

#header nav {
    overflow: auto;
    white-space: nowrap;
    text-align: center;
    width: 100%;
    background-color: var(--color-lightgray);
}

#header nav ul {
    padding-left: 0;
}

#header nav li {
    display: inline;
    margin: 0 10px;
}

#header nav a {
    color: var(--color-quaternary);
    font-size: var(--font-size-menu);
}

#header nav a:hover {
    border-color: var(--color-quaternary);
    color: var(--color-quaternary);
}

#header .header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

@media only screen and (max-width: 991px) {
    #header nav {
        width: 100%;
    }

    #header .site-logo {
        padding: 20px 0;
    }

    #header .header-container {
        flex-direction: column;
        width: 100%;
        max-width: 100%;
    }
}

@media only screen and (min-width: 992px) {

    #header nav {
        background-color: var(--color-white);
        text-align: right;
        padding-bottom: 5px;
    }

    #header nav ul {
        margin: 20px 0;
    }

    #header nav li {
        margin: 0 4px;
    }

    #header nav a {
        color: var(--color-black);
        font-weight: var(--font-weight-bold);
    }
}

a.custom-logo-link:hover {
    border: none;
}

.site-content {
    word-break: break-word;
}

/**
 * Footer.
 */
.site-footer {
    z-index: 20;
    position: relative;
    margin-top: 100px;
    text-align: center;
    background-color: var(--color-quaternary);
    padding: 100px 0 40px 0;
    color: var(--color-white);
}

.follow-me {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    padding: 30px 0 20px 0;
}

.follow-me-title {
    font-size: var(--font-size-h2);
    font-weight: var(--font-weight-bold);
    color: var(--color-tertiary);
    margin: 0;
}

.follow-me-list {
    padding-left: 15px;
}

.follow-me-list li {
    list-style: none;
    display: inline-block;
    margin: 0 10px;
}

.follow-me-list li a {
    transition: var(--transition-default);
}

.follow-me-list li a:hover {
    border: none;
    background-color: var(--color-tertiary);
    border-radius: 50%;
}

.site-footer img.image {
    width: 150px;
    margin-bottom: 30px;
}

.footer-navigation-wrapper {
    margin: auto;
    padding: 0 0 50px 0;
}

.footer-navigation-wrapper li {
    list-style: none;
    margin: 20px;
    display: block;
}

@media only screen and (min-width: 992px) {

    .follow-me {
        flex-direction: row;
    }

    .footer-navigation-wrapper {
        padding-top: 30px;
        padding-bottom: 35px;
        width: 80%;
    }

    .footer-navigation-wrapper li {
        display: inline-block;
        margin: 10px;
    }
}

.footer-navigation-wrapper li a {
    color: var(--color-white);
    transition: var(--transition-default);
    font-weight: var(--font-weight-bold);
}

.footer-navigation-wrapper li a:hover {
    border-color: var(--color-white);
}

/**
 * Container.
 */
.alignfull > *,
.post-thumbnail,
.entry-content .wp-audio-shortcode,
.entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.wp-block-separator):not(.woocommerce),
*[class*=inner-container] > *:not(.entry-content):not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.wp-block-separator):not(.woocommerce),
.default-max-width {
    max-width: var(--container-width);
    width: var(--container-width);
    margin-left: auto;
    margin-right: auto;
}

.alignwide,
.wide-max-width {
    max-width: 100%;
    width: 100%;
}

/**
 * Globally included block libraries.
 */

/**
 * Button.
 */
.wp-block-button__link,
a.wp-block-button__link {
    background-color: var(--color-secondary);
    color: var(--color-white);
    box-shadow: var(--box-shadow-default);
    font-size: var(--font-size-button);
    border: none;
    margin: 5px 0;
    cursor: pointer;
    display: inline-block;
    padding: 16px 36px;
    border-radius: 3px;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.wp-block-button__link a {
    color: var(--color-white);
}

.wp-block-button__link:hover,
a.wp-block-button__link:hover {
    box-shadow: var(--box-shadow-strong);
    color: var(--color-white);
}

.wp-block-buttons.aligncenter {
    text-align: center;
}

